--- a/BGKutaisiBot/BGKutaisiBot.csproj
+++ b/BGKutaisiBot/BGKutaisiBot.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Telegram.Bot" Version="19.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\submodules\Tesera\Tesera.csproj" />
+  </ItemGroup>
+
 </Project>
